--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,6 +1,7 @@
 * {
     margin: 0px;
     padding: 0px;
+    font-family: 'Montserrat Bold';
 }
 
 @font-face {
@@ -23,774 +24,262 @@
     font-style: normal;
     font-weight: normal;
 }
-
-.smile_foundation {
-    background: #f94a29;
-    border-radius: 0px 77px 0px 0px;
-    z-index: 100;
+.tercer_title{
+    font-size: 30px;
+    padding-top: 20px;
+}
+.tercer_datos{
+    font-family: 'Montserrat Regular';
+    margin-bottom: 20px;
+}
+.tercer_boton{
+    background: #00649a;
+    padding: 10px 20px 10px 10px;
+    text-align: center;
+    border-radius: 20px;
+    width: 69%;
+    font-family: 'Montserrat Regular';
+    font-size: 26px;
+    margin-top: 20px;
     position: absolute;
-    width: 63%;
-    margin-top: 53px;
-    display: flex;
-    flex-direction: column;
-    align-items: end;
 }
-
-#img_1_home {
-    background-image: url(/imgs/imagen_1_home.png);
-    background-repeat: no-repeat;
-    background-size: contain;
-    width: 100%;
-    height: 585px;
-    position: relative;
+.tercer_secundary_title{
+    font-size: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
-
-.left_text2 {
-    width: 70%;
+.learnmore{
     color: #00649a;
-    font-family: "Montserrat Bold";
-    font-size: 22px;
+    font-weight: 100;
+    font-family: 'Montserrat Regular';
+
+}
+.soldout{
+    background: #00649a;
+    color: white;
+    font-family: 'Montserrat Regular';
+    font-size: 25px;
+    padding: 10px;
+    text-align: center;
+    border-radius: 10px;
+    margin-top: 20px;
+}
+.trip-text{
+    font-family: 'Montserrat Regular';
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.trip-title2{
+    background: #fce22a;
+    padding: 20px 20px 10px 0px;
+    text-align: end;
+    border-radius: 0px 35px 0px 0px;
+    color: #00649a;
+    font-size: 30px;
+}
+.tercer_part{
+    background: #002e5d;
+    color: white;
+}
+.tercer_part img{
+    width: 100%;
+    padding: 0px 0px 50px 0px;
+}
+.cuarto_part img{
+    width: 100%;
+}
+.cuarto_part{
+    margin-top: 50px;
+}
+.cuarto_title{
+    background: #f94a29;
+    border-radius: 0px 33px 0px 0px;
+    color: white;
+    padding: 20px;
+    margin-top: -122px;
+    position: sticky;
+    width: 70%;
+    font-size: 28px;
+}
+.cuarto_text{
+    margin-top: 20px;
+    color: #002e5d;
+    font-size: 15px;
+    margin-left: 10px;
+    margin-bottom: 20px;
+}
+.cuarto_button{
+    background: #fce22a;
+    color: #002e5d;
+    font-size: 25px;
+    padding: 10px;
+    text-align: center;
+    border-radius: 10px;
+    margin-top: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+.quinta_part_title{
+    background: #002e5d;
+    color: white;
+    font-size: 30px;
+    text-align: center;
+    border-radius: 0px 50px 0px 0px;
+    margin-top: 20px;
+}
+.quinta_part_button{
+    display: none;
+}
+.quinta_part img{
+    width: 100%;
+}
+.partnerships img{
+    width: 30%;
+}
+.partnerships{
+    flex-wrap: wrap;
+    display: flex;
+}
+.registration{
+    background: #f94a29;
+    color: white;
+    font-family: 'Montserrat Regular';
+    font-size: 25px;
+    padding: 10px;
+    text-align: center;
+    border-radius: 10px;
+    margin-top: 20px;
+}
+.wrapper{
+    margin-top: 90px;
 }
 
-.left_2 {
-    margin-top: 321px;
+.smile_foundation{
+    background-color: #f94a29;
+    border-radius: 0px 33px 0px 0px;
+    color: white;
+    padding: 20px;
+    margin-top: -52px;
+}
+.smile_foundation #smile_bold_text{
+    font-size: 40px;
+}
+.first_part{
+    display: flex;
+    flex-direction: column-reverse;
+}
+.first_part img{
+    width: 80%;
+}
+.left_text2{
+    color: #00649a;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.second_texto1{
+    text-align: center;
+    font-size: 30px;
+    color: #002e5d;
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+.trip{
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-
-.left {
-    width: 50%;
-}
-
-.right {
-    width: 50%;
-}
-
-#donate_icon {
+.trip-right1{
     display: flex;
-}
-
-body {
-    font-family: "Montserrat Regular";
-}
-
-.nav {
-    display: flex;
-    position: fixed;
-    top: 0;
-    /* background-color: rgb(146, 56, 56); */
-    width: 100%;
-    flex-direction: row-reverse;
-    font-family: "Montserrat Regular";
     flex-direction: column;
-    z-index: 500;
-
+    width: 90%;
 }
-
-.smile_icon_background {
-    background-image: url(/imgs/sonrisa_azul.png);
-    background-repeat: no-repeat;
-    background-size: contain;
-    width: 236px;
-    height: 236px;
-    z-index: 1;
-    position: absolute;
-    margin-left: 50%;
-    margin-top: 70px;
-    opacity: 0.5;
-}
-
-.smile_icon_background2 {
-    background-image: url(/imgs/sonrisa_azul.png);
-    background-repeat: no-repeat;
-    background-size: contain;
-    width: 350px;
-    height: 350px;
-    z-index: 1;
-    position: absolute;
-    margin-left: 0px;
-    left: 269px;
-    margin-top: 102px;
-    opacity: 0.5;
-}
-
-.four_part {
-    display: flex;
-    margin-top: 82px;
-}
-
-.four_title {
+.trip-title1{
     background: #f94a29;
-    width: 45%;
-    font-family: 'Montserrat Bold';
-    font-size: 45px;
+    padding: 20px 20px 10px 0px;
+    text-align: end;
+    border-radius: 0px 35px 0px 0px;
     color: white;
-    border-radius: 40px 0px 0px 0px;
+    font-size: 30px;  
+}
+.trip img{
+    width: 90%;
+}
+.boton_yellow1{
+    background-color: #fce22a;
+    padding: 20px;
     text-align: center;
-    padding: 10px 10px 10px;
-    padding: 20px 0px 20px 30px;
-    align-self: end;
-    position: absolute;
-    display: flex;
-    margin-top: 75px;
-}
-
-.four_text {
-    color: #002e5d;
-    font-family: 'Montserrat Bold';
-    width: 285px;
-    margin-left: 20px;
-    margin-top: 240px;
-    margin-bottom: 20px;
-
-}
-
-.four_button {
-    color: #002e5d;
-    font-family: 'Montserrat Bold';
-    background: #fce22a;
-    width: 300px;
-    text-align: center;
-    font-size: 19px;
-    border-radius: 5px;
-    padding: 10px 0px 10px 0px;
-    cursor: pointer;
-    margin-left: 20px;
-}
-
-.five_part {
-    display: flex;
-    margin-top: 69px;
-    background-image: url(/imgs/imagen_007_home.png);
-    background-repeat: no-repeat;
-    background-size: contain;
-    width: 100%;
-    height: 643px;
-    background-position: center;
-    flex-direction: column;
-    background-position-y: 86px;
-
-}
-
-/*
-.five_part_photo{
-    background-image: url('imgs/imagen_007_home.png');
-
-}*/
-.five_part_head {
-    background: #002e5d;
-    width: 55%;
-    font-family: 'Montserrat Bold';
-    font-size: 45px;
-    color: white;
-    border-radius: 0px 111px 0px 0px;
-    text-align: center;
-    padding: 10px 10px 10px;
-    padding: 20px 0px 20px 30px;
-    align-self: end;
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    margin-top: 75px;
-    align-self: baseline;
-}
-
-.five_part_button {
-    background: #fce22a;
-    width: 300px;
-    align-self: center;
-    font-size: 19px;
     color: #00649a;
-    padding: 10px 0px 10px 0px;
-    border-radius: 5px;
-    cursor: pointer;
-    margin-top: 20px;
-    margin-bottom: -45px;
+    font-size: 29px;
 }
-
-.left_four {
-    background-image: url(/imgs/imagen_006_home.png);
-    background-repeat: no-repeat;
-    width: 100vw;
-    height: 74vh;
-    background-size: contain;
-    margin-left: 10%;
-}
-
-.right_four {
+nav{
     display: flex;
     flex-direction: column;
-    width: 100%;
-}
-
-.wrapper {
-    display: flex;
-    flex-direction: column;
-}
-
-.first_part {
-    display: flex;
-    margin-top: 149px;
-}
-
-.icon_smile {
-    width: 100px;
-    background-color: red;
     position: fixed;
+    width: 100%;
+    top: 0;
+}
+.menu_menu{
     display: flex;
+    width: 100%;
+    justify-content: space-between;
 }
-
-#logo_pequeno {
-    background-image: url(/imgs/logo_pequeno.png);
-    background-repeat: no-repeat;
-    background-size: contain;
-    width: 100px;
-    height: 100px;
-    position: absolute;
-    margin-top: 15px;
-    margin-left: 15px;
-}
-
-.menu_menu {
+.menu_big{
     display: flex;
     flex-direction: row-reverse;
 }
-
-.donate_social {
-    display: flex;
-    flex-direction: row-reverse;
-    cursor: pointer;
+#menu_letra{
+    padding: 0px 10px;
+    display: none;
 }
-
-#donate_icon {
-    display: flex;
-    flex-flow: row-reverse;
-    margin-right: 10px;
-    margin-top: 10px;
-    color: red;
-}
-
-#donate_letra {
-    display: flex;
-    flex-flow: row-reverse;
-    margin-right: 10px;
-    margin-top: 10px;
-    color: red;
-    FONT-SIZE: 13px;
-}
-
-.menu {
-    cursor: pointer;
-    display: flex;
-    margin-top: 10px;
-    flex-direction: column;
-    width: 100px;
-    height: 100px;
-    align-items: flex-end;
-    align-self: flex-end;
-}
-
-.partnerships_div {
-    width: 80px;
-    margin: 20px;
-    cursor: pointer;
-}
-
-.partnerships {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-#smile_bold_text {
-    word-break: break-word;
-    font-family: "Montserrat Bold";
-    color: white;
-    font-size: 80px;
-    /* margin-left: 40px; */
-    line-height: 80%;
-    padding-top: 30px;
-    margin-right: 60px;
-}
-
-#smile_regular_text {
-    font-family: "Montserrat Regular";
-    color: white;
-    font-size: 37px;
-    margin-right: 60px;
-    margin-bottom: 15px;
-}
-
-.social_network {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    margin-right: 10px;
-    margin-top: 0px;
-}
-
-.social_network i {
-    margin-top: 7px;
-    font-size: 17px;
-    cursor: pointer;
-}
-
-#menu_letra {
-    display: flex;
-    flex-direction: column-reverse;
-    margin: 0px 10px 0px 0px;
-    cursor: pointer;
-    font-weight: bold;
-}
-
 #menuColor1 {
-    width: 27%;
-    height: 50px;
+    width: 30px;
+    height: 30px;
     background-color: #002e5d;
 }
 
 #menuColor2 {
-    width: 57%;
-    height: 50px;
+    width: 70px;
+    height: 30px;
     background-color: #f94a29;
     border-radius: 15px 0px 0px 0px;
 }
 
 #menuColor3 {
-    width: 41%;
-    height: 50px;
+    width: 45px;
+    height: 30px;
     background-color: #00649a;
 }
 
 #menuColor4 {
-    width: 100%;
-    height: 50px;
+    width: 96px;
+    height: 30px;
     background-color: #fce22a;
 }
-
-.second_part {
+.donate_social{
     display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.third_part {
-    display: flex;
-    justify-content: center;
-    background-color: #002e5d;
-    padding: 40px 0px 40px 0px;
-}
-
-.third_datos {
-    color: white;
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
-
-.third_boton {
-    background-color: #00649a;
-    color: white;
-    text-align: center;
-    font-size: 19px;
-    border-radius: 5px;
-    padding: 10px 0px 10px 0px;
-    cursor: pointer;
-}
-
-.third_secundary_title {
-    font-family: 'Montserrat Bold';
-    color: white;
-    font-size: 33px;
-    margin-top: 20px;
-}
-
-.third_title {
-    font-family: 'Montserrat Bold';
-    color: white;
-    font-size: 42px;
-    margin-top: 20px;
-}
-
-.third_part .part_right {
-    background-image: url(/imgs/imagen_005_home.png);
-    background-repeat: no-repeat;
-    width: 310px;
-    height: 433px;
-    background-size: contain;
-    margin-left: 60px;
-}
-
-.part_left {
-    z-index: 100;
-}
-
-.trip-left1 {
-    background-image: url(/imgs/trip1.png);
-    background-repeat: no-repeat;
-    width: 400px;
-    height: 499px;
-    border-radius: 0px 48px 0px 48px;
-    box-shadow: 8px 0px 13px #858181;
-    background-size: cover;
-}
-
-.trip-left3 {
-    background-image: url(/imgs/trip3.png);
-    background-repeat: no-repeat;
-    width: 400px;
-    height: 499px;
-    border-radius: 0px 48px 0px 48px;
-    box-shadow: 8px 0px 13px #858181;
-    background-size: cover;
-}
-
-.trip-left2 {
-    background-image: url(/imgs/trip2.png);
-    background-repeat: no-repeat;
-    width: 400px;
-    height: 499px;
-    border-radius: 48px 0px 48px 0px;
-    box-shadow: 8px 0px 13px #858181;
-    background-size: cover;
-}
-
-.trip-right1 {
-    margin-top: 40px;
-    display: flex;
-    flex-direction: column;
-}
-
-.trip-title1 {
-    background: #f94a29;
-    width: fit-content;
-    padding: 10px 10px 5px 10px;
-    border-radius: 0px 10px 0px 0px;
-    font-family: 'Montserrat Regular';
-    color: white;
-    font-size: 15px;
-    font-weight: bolder;
-}
-
-.trip-title3 {
-    background: #00649a;
-    width: fit-content;
-    padding: 10px 10px 5px 10px;
-    border-radius: 0px 10px 0px 0px;
-    font-family: 'Montserrat Regular';
-    color: #fce22a;
-    font-size: 15px;
-    font-weight: bolder;
-}
-
-.trip-title2 {
-    background: #fce22a;
-    width: 100%;
-    padding: 10px 10px 5px 10px;
-    border-radius: 10px 0px 0px 0px;
-    font-family: 'Montserrat Regular';
-    color: #00649a;
-    font-size: 15px;
-    font-weight: bolder;
-}
-
-.trip {
-    display: flex;
-    z-index: 200;
-    margin-bottom: 30px;
-}
-
-.second_texto1 {
-    font-family: 'Montserrat Bold';
-    color: #002e5d;
-    font-size: 37px;
-    margin-top: 38px;
-    margin-right: 100px;
-    margin-bottom: 38px;
-}
-
-.Partnership_button {
-    color: #002e5d;
-    font-family: 'Montserrat Bold';
-    background: #fce22a;
-    width: 300px;
-    text-align: center;
-    font-size: 19px;
-    border-radius: 5px;
-    padding: 10px 0px 10px 0px;
-    cursor: pointer;
-    margin-left: 20px;
-    align-self: center;
-    margin-top: 50px;
-    margin-bottom: 50px;
-}
-
-.top_footer {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    margin-bottom: 20px;
-}
-
-.footer_left {
-    display: flex;
-    flex-direction: column;
-    padding: 20px;
-
-}
-
-.footer_right {
-    display: flex;
-    flex-direction: column;
-    padding: 20px;
-}
-
-.text_final_footer {
-    text-align: center;
-    margin-bottom: 10px;
-}
-
-.text_final_footer2 {
-    text-align: center;
-    font-size: 12px;
-}
-
-footer {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    background-color: #002e5d;
-    color: white;
-}
-
-.footer_left a {
+    flex-direction: row-reverse;
+    align-self: end;
     margin-top: 10px;
 }
-
-.footer_right a {
-    margin-top: 10px;
-}
-
-.soldout {
-    background-color: #00649a;
-    color: white;
-    text-align: center;
-    border-radius: 10px;
-    padding: 5px 0px 5px 0px;
-    margin-top: 10px;
-    cursor: pointer;
-}
-
-.six_part {
+.social_network{
     display: flex;
-    background-image: url(/imgs/imagen_008_home.png);
-    background-repeat: no-repeat;
-    width: 100%;
-    height: initial;
-    background-size: cover;
-    margin-top: 100px;
-    z-index: 1;
     flex-direction: column;
+    align-self: end;
 }
-
-.six_title {
+.social_network i{
+    font-size: 25px;
+    padding: 10px 5px 0px 0px;
+}
+nav img{
+    width: 80px;
+    height: 24px;
+    padding: 40px 0px 0px 0px;
+}
+.menu{
     display: flex;
-    font-size: 60px;
-    font-family: 'Montserrat Bold';
-    color: #002e5d;
-    -webkit-text-stroke: 2px black;
-    margin-top: 47px;
-    align-self: center;
+    flex-direction: column;
+    align-items: end;
 }
-
-.registration {
-    background-color: #f94a29;
-    color: white;
-    text-align: center;
-    border-radius: 10px;
-    padding: 5px 0px 5px 0px;
-    margin-top: 10px;
-    cursor: pointer;
-}
-
-.learnmore {
-    color: #00649a;
-    cursor: pointer;
-    margin-top: 10px;
-}
-
-.boton_yellow1 {
-    background: #fce22a;
-    padding: 0px 74px 0px 74px;
-    font-size: 40px;
-    font-family: 'Montserrat Bold';
-    color: #00649a;
-    border-radius: 10px;
-    margin-top: 50px;
-    cursor: pointer;
-}
-
-.trip-right1 .trip-text {
-    margin-left: 15px;
-}
-
-@media only screen and (max-width: 1050px) {
-    .smile_foundation {
-        background: #f94a29;
-        border-radius: 0px 77px 0px 0px;
-        z-index: 100;
-        position: absolute;
-        width: 86%;
-        margin-top: -30px;
-        display: flex;
-        flex-direction: column;
-        align-items: end;
-    }
-
-    #smile_regular_text {
-        font-family: "Montserrat Regular";
-        color: white;
-        font-size: 3.2vw;
-        margin-right: 70px;
-        margin-bottom: 15px;
-    }
-    .left{
-        width: 100%;
-    }
-    .right{
-        width: 100%;
-    }
-    .first_part {
-        display: flex;
-        flex-direction: column-reverse;
-        margin-top: 149px;
-    }
-    #smile_bold_text {
-        word-break: break-word;
-        font-family: "Montserrat Bold";
-        color: white;
-        font-size: 7vw;
-        line-height: 80%;
-        padding-top: 30px;
-        margin-right: 60px;
-    }
-    .left_2 {
-        margin-top: 100px;
-    }
-    #trip1{
-        flex-direction: column;
-    }
-    #trip2{
-        flex-direction: column-reverse;
-    }
-    #trip3{
-        flex-direction: column;
-    }
-    .third_part {
-
-        flex-direction: column;
-
-    }
-    .smile_icon_background2 {
-        background-image: url(/imgs/sonrisa_azul.png);
-        background-repeat: no-repeat;
-        background-size: contain;
-        width: 100px;
-        height: 100px;
-        z-index: 1;
-        position: absolute;
-        margin-left: 0px;
-        left: 0;
-        opacity: 0.5;
-    }
-    .smile_icon_background {
-        background-image: url(/imgs/sonrisa_azul.png);
-        background-repeat: no-repeat;
-        background-size: contain;
-        width: 163px;
-        height: 169px;
-        z-index: 1;
-        position: absolute;
-        margin-left: 47%;
-        margin-top: 70px;
-        opacity: 0.5;
-    }
-    .four_part {
-        display: flex;
-        margin-top: 82px;
-        flex-direction: column;
-        width: 100vw;
-    }
-    .four_button {
-        color: #002e5d;
-        font-family: 'Montserrat Bold';
-        background: #fce22a;
-        width: 300px;
-        text-align: center;
-        font-size: 19px;
-        border-radius: 5px;
-        padding: 10px 0px 10px 0px;
-        cursor: pointer;
-        margin-left: 20px;
-    }
-    .four_title {
-        background: #f94a29;
-        font-family: 'Montserrat Bold';
-        width: 81%;
-        font-size: 38px;
-        color: white;
-        border-radius: 40px 0px 0px 0px;
-        text-align: center;
-        padding: 10px 10px 10px;
-        padding: 20px 0px 20px 30px;
-        align-self: center;
-        position: absolute;
-        display: flex;
-        margin-top: -45px;
-    }
-    .four_text {
-        color: #002e5d;
-        font-family: 'Montserrat Bold';
-        width: 90%;
-        margin-left: 20px;
-        margin-top: 95px;
-        margin-bottom: 20px;
-    }
-    .left_four {
-        background-image: url(/imgs/imagen_006_home.png);
-        background-repeat: no-repeat;
-        width: 90vw;
-        height: 60vh;
-        background-size: contain;
-        margin-left: 0;
-    }
-    .right_four {
-        display: flex;
-        flex-direction: column;
-        width: 90vw;
-    }
-    .five_part_head {
-        background: #002e5d;
-        width: 87%;
-    }
-    .five_part {
-        width: 100%;
-        height: 497px;
-        background-position-y: 193px;
-    }
-    .six_title {
-        display: flex;
-        font-size: 43px;
-        font-family: 'Montserrat Bold';
-        color: #002e5d;
-        -webkit-text-stroke: 2px black;
-        margin-top: 47px;
-        align-self: center;
-        text-align: center;
-    }
-    .partnerships {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-    }
+.menu_big #menu_letra{
+    align-self: flex-end;
 }
